# intents-terminal-explorer

./: .env.example  .gitattributes  .gitignore  BUILD_VERIFICATION.md  CHANGELOG.md  CLAUDE.md  COLLABORATION.md  COMMIT_GUIDE.md  Cargo.toml  EGUI_WEB_READY.md  Makefile  PINNED_MARKS_IMPLEMENTATION.md  PLUGIN_ARCHITECTURE.md  PLUGIN_INTEGRATION_EXAMPLE.md  PLUGIN_SYSTEM_SUMMARY.md  PROJECT_SUMMARY.md  QA_CHECKLIST.md  QUICK_START.md  README.md  REF_ARB_SCANNER_REVERSAL.md  SESSION_NOTES.md  Trunk-dom.toml  Trunk-egui.toml  Trunk-egui.toml.bak  Trunk.toml  ZYPHERPUNK_SETUP_GUIDE.md  arb_config.toml.example  create-simple-archive.sh  index-dom.html  index-egui.html  index.html  package-lock.json  package.json  playwright.config.ts  run.sh  tauri-dev.sh  test-scrolling.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  e2e.yml  goe-ablation.yml
dist-dom/: app.js  index.html  nearx-web-dom-5079f40602348655.js  nearx-web-dom-5079f40602348655_bg.wasm
dist-egui/: index.html  nearx-web-1d3e181deeed0696.js
docs/: DEEP_LINKS.md  KEYMAP.md
e2e/: smoke.spec.ts
e2e-tests/: README.md  package.json
e2e-tests/test/: smoke.spec.mjs
extension/: README.md  background.js  content.js  contentScript.js  manifest.chrome.json  manifest.firefox.json  manifest.json  test-page.html
md-claude-chapters/: 01-getting-started.md  02-user-guide.md  03-configuration.md  04-architecture.md  05-building.md  06-tauri-desktop.md  07-testing-security.md  08-reference.md
native-host/: Cargo.toml  com.nearx.native.json  com.ratacat.native.json
native-host/src/: main.rs
native-messaging/: README.md  com.zypherpunk.zcashsigner.json
nearx-plugin-core/: Cargo.toml
nearx-plugin-core/src/: ipc.rs  lib.rs  traits.rs
plugins/tx-analyzer/: Cargo.toml
plugins/tx-analyzer/src/: lib.rs
plugins/validator-monitor/: Cargo.toml
plugins/validator-monitor/src/: lib.rs
ratacat-plugin-core/: Cargo.toml
ratacat-plugin-core/src/: ipc.rs  lib.rs  registry.rs  traits.rs  types.rs
scripts/: check-components.js
src/: app.rs  arb_config.rs  arb_engine.rs  archival_fetch.rs  archival_fetch_wasm.rs  auth.rs  clipboard.rs  config.rs  constants.rs  copy_api.rs  copy_payload.rs  credentials.rs  debug.rs  egui_extra.rs  execution_engine.rs  fastnear_api.rs  filter.rs  flags.rs  history.rs  json_auto_parse.rs  json_pretty.rs  json_renderer.rs  json_syntax.rs  lib.rs  main.rs  marks.rs  models.rs  near_args.rs  net.rs  pane_frame.rs  plugin_host.rs  plugin_ui.rs  price_discovery.rs  ref_finance_client.rs  risk_manager.rs  router.rs  rpc_utils.rs  slippage.rs  source_rpc.rs  source_ws.rs  (+10 more)
src/platform/: mod.rs  native.rs  runtime_native.rs  runtime_wasm.rs  wasm.rs  web.rs
src/theme/: tokens.rs
src/ui_core/: layout.rs  mod.rs  policy.rs
src/util/: dblclick.rs  mod.rs
tauri-workspace/: Cargo.toml  dev-deep-links.sh  test-deeplink.sh  test_deeplink.sh
tauri-workspace/assets/: index.html
tauri-workspace/src-tauri/: Cargo.toml  ZYPHERPUNK_README.md  build.rs  tauri.conf.json  tauri.conf.test.json  tauri.e2e.conf.json  tauri.test.conf.json
tauri-workspace/src-tauri/capabilities/: deep-link-capability.json  main-capability.json
tauri-workspace/src-tauri/icons/: icon.png.txt
tauri-workspace/src-tauri/src/: deeplink.rs  lib.rs  main.rs  test_api.rs  zcash_auth.rs  zcash_handler.rs  zcash_native_msg.rs  zcash_signer.rs
tauri-workspace/test-ui/: index.html  nearx-test-bridge.js
tests/: auth_callback.rs  theme_accessibility.rs  ui_flags.rs
tests/e2e/: nearx.spec.ts
tools/: alpha_preflight.sh  build-web.sh  list_recent_by_git.sh  list_recent_created.sh  preflight.sh  release.sh  web-dev.sh
web/: app.css  app.js  auth.js  deep_link.js  index.html  index.html.example  open_desktop.js  perf-test.js  platform.js  router_shim.js  theme.css  wasm_guard.js
