[package]
name = "ratacat"
version = "0.3.0"
edition = "2021"
default-run = "ratacat"

[workspace]
members = [
    ".",
    # Plugins temporarily disabled - has lifetime compilation issues
    # "ratacat-plugin-core",
    # "plugins/validator-monitor",
    # "plugins/tx-analyzer",
]

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# Plugin system (temporarily disabled)
# ratacat-plugin-core = { path = "./ratacat-plugin-core" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"

# Blockchain data sources
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
once_cell = "1"

# NEAR Protocol crates
near-primitives = "0.27.0"
near-crypto = "0.27.0"
near-jsonrpc-client = { version = "0.15.0", features = ["any"] }
near-jsonrpc-primitives = "0.27.0"
near-account-id = "1.0.0"

# NEAR utility crates for formatting
near-gas = { version = "0.2", features = ["serde", "borsh"] }
near-token = { version = "0.2", features = ["serde", "borsh"] }

# Clipboard support
copypasta = "0.10"

# SQLite history
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching for credentials
notify = "6.1"