[package]
name = "ratacat"
version = "0.3.0"
edition = "2021"
default-run = "ratacat"

[lib]
name = "ratacat"
path = "src/lib.rs"

[[bin]]
name = "ratacat"
path = "src/bin/ratacat.rs"
required-features = ["native"]

[[bin]]
name = "ratacat-web"
path = "src/bin/ratacat-web.rs"
required-features = ["web"]

[[bin]]
name = "ratacat-proxy"
path = "src/bin/ratacat-proxy.rs"
required-features = ["proxy"]

[[bin]]
name = "ratacat-egui-web"
path = "src/bin/ratacat-egui-web.rs"
required-features = ["egui-web"]

[[bin]]
name = "ref-arb-scanner"
path = "src/bin/ref-arb-scanner.rs"
required-features = ["native"]

[workspace]
resolver = "2"
members = [
  "tauri-workspace/src-tauri",
  "native-host"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
log = "0.4"
tauri-plugin-deep-link = "2.4"
tauri-plugin-single-instance = "2.0"

[features]
default = []
native = [
    "dep:crossterm",
    "dep:copypasta",
    "dep:rusqlite",
    "dep:notify",
    "dep:tokio-tungstenite",
    "dep:tungstenite",
    "dep:futures-util",
    "dep:near-primitives",
    "dep:near-crypto",
    "dep:near-jsonrpc-client",
    "dep:near-jsonrpc-primitives",
    "dep:near-account-id",
    "dep:near-gas",
    "dep:near-token",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio/time",
    "tokio/signal",
    "tokio/fs",
    "tokio/io-util",
]
near-gas = ["dep:near-gas"]
near-token = ["dep:near-token"]
web = [
    "dep:ratzilla",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:getrandom",
    "dep:console_error_panic_hook",
    "dep:wasm-logger",
    "dep:web-time",
    "dep:gloo-timers",
    "dep:gloo-render",
]
proxy = [
    "dep:axum",
    "dep:tower-http",
    "dep:near-primitives",
    "dep:near-crypto",
    "dep:near-jsonrpc-client",
    "dep:near-jsonrpc-primitives",
    "dep:near-account-id",
    "dep:near-gas",
    "dep:near-token",
    "tokio/full",
    "tokio/rt-multi-thread",
]

egui-web = [
    "dep:egui",
    "dep:eframe",
    "dep:egui_ratatui",
    "dep:soft_ratatui",
    "dep:embedded-graphics-unicodefonts",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:getrandom",
    "dep:console_error_panic_hook",
    "dep:wasm-logger",
    "dep:web-time",
    "dep:gloo-timers",
]

[dependencies]
# Core dependencies (both platforms)
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
base64 = "0.22"
once_cell = "1"
cfg-if = "1"

# Ratatui (with conditional backend)
ratatui = { version = "0.29", default-features = false }

# Chrono with conditional WASM support
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# HTTP client (shared, with rustls for both platforms)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# NEAR Protocol crates
# Note: All near-* crates are optional because they have C dependencies or depend on crates with C dependencies
near-primitives = { version = "0.27.0", optional = true }
near-crypto = { version = "0.27.0", optional = true }
near-jsonrpc-client = { version = "0.15.0", features = ["any"], optional = true }
near-jsonrpc-primitives = { version = "0.27.0", optional = true }
near-account-id = { version = "1.0.0", optional = true }
near-gas = { version = "0.2", features = ["serde", "borsh"], optional = true }
near-token = { version = "0.2", features = ["serde", "borsh"], optional = true }

# Tokio (with different features per platform)
tokio = { version = "1", default-features = false }

# Native-only dependencies (optional)
crossterm = { version = "0.27", optional = true }
copypasta = { version = "0.10", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
notify = { version = "6.1", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }

# Web-only dependencies
ratzilla = { version = "0.2", optional = true }
egui = { version = "0.32", optional = true }
eframe = { version = "0.32", optional = true, default-features = false, features = ["glow", "default_fonts"] }
egui_ratatui = { version = "2.0", optional = true }
soft_ratatui = { version = "0.1", features = ["embedded-graphics", "unicodefonts"], optional = true }
embedded-graphics-unicodefonts = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window", "Navigator", "Clipboard", "Storage", "console", "Location", "Url", "UrlSearchParams",
    "Document", "HtmlElement", "HtmlCanvasElement", "Element", "EventTarget",
    "KeyboardEvent", "MouseEvent", "WheelEvent", "FocusEvent",
    "DomRect", "CssStyleDeclaration",
    "FontFaceSet", "FontFaceSetLoadStatus", "ResizeObserver", "ResizeObserverEntry"
] }
getrandom = { version = "0.2", optional = true, features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-logger = { version = "0.2", optional = true }
web-time = { version = "1.0", optional = true }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
gloo-render = { version = "0.2", optional = true }

# Proxy-only dependencies (backend server)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", optional = true, features = ["cors"] }

# Target-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "macros", "time", "rt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }