[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["you"]

[workspace.dependencies]
tauri = { version = "2", default-features = false, features = [] }
tauri-build = { version = "2" }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
log = "0.4"