[package]
name = "tx-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
ratacat-plugin-core = { path = "../../ratacat-plugin-core" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
log = "0.4"