[package]
name = "explorer-tauri"
version = "0.1.0"
edition = "2021"
default-run = "explorer-tauri"

[lib]
name = "explorer_tauri"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "devtools"] }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
log = { workspace = true }
env_logger = "0.10"
thiserror = "1"
rand = "0.8"

# Deep links + single instance
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-log = "2"

# Utilities
chrono = "0.4"

# egui + ratatui stack (optional - only for egui-tauri binary)
egui = { version = "0.30", optional = true }
eframe = { version = "0.30", default-features = false, features = ["glow", "default_fonts"], optional = true }
egui_ratatui = { version = "2.0", optional = true }
soft_ratatui = { version = "0.1", features = ["embedded-graphics", "unicodefonts"], optional = true }
embedded-graphics-unicodefonts = { version = "0.2", optional = true }
ratatui = { version = "0.29", optional = true }

# Path dependency to main ratacat crate
ratacat = { path = "../..", optional = true }
tokio = { version = "1", features = ["sync", "rt"], optional = true }

[target.'cfg(desktop)'.dependencies]
anyhow = { version = "1", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = []
egui-ui = ["dep:egui", "dep:eframe", "dep:egui_ratatui", "dep:soft_ratatui", "dep:embedded-graphics-unicodefonts", "dep:ratatui", "dep:ratacat", "dep:tokio", "dep:anyhow"]
