[package]
name = "nearx-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "nearx_tauri"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "devtools"] }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
log = { workspace = true }
env_logger = "0.10"
thiserror = "1"
rand = "0.8"

# Deep links + single instance
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"

# Utilities
chrono = "0.4"
sha2 = "0.10"

# Biometric authentication (macOS Touch ID)
[target.'cfg(target_os = "macos")'.dependencies]
localauthentication-rs = "0.1"

# egui + ratatui stack (optional - only for egui-tauri binary)
egui = { version = "0.32", optional = true }
eframe = { version = "0.32", default-features = false, features = ["glow", "default_fonts"], optional = true }
egui_ratatui = { version = "2.0", optional = true }
soft_ratatui = { version = "0.1", features = ["embedded-graphics", "unicodefonts"], optional = true }
embedded-graphics-unicodefonts = { version = "0.2", optional = true }
ratatui = { version = "0.29", optional = true }

# Path dependency to main nearx crate (with egui-web feature for theme support)
nearx = { path = "../..", optional = true, features = ["egui-web"] }
tokio = { version = "1", features = ["sync", "rt"], optional = true }
anyhow = { version = "1", optional = true }

[target.'cfg(desktop)'.dependencies]

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = []

# E2E testing support - exposes test-only IPC commands for Selenium/WebDriver tests
e2e = []

# Disabled - using Tauri webview instead of native eframe
# egui-ui = ["dep:egui", "dep:eframe", "dep:egui_ratatui", "dep:soft_ratatui", "dep:embedded-graphics-unicodefonts", "dep:ratatui", "dep:nearx", "dep:tokio", "dep:anyhow"]

[[bin]]
name = "nearx-tauri"
path = "src/main.rs"

# Disabled - now using src/main.rs with Tauri window manager instead
# [[bin]]
# name = "nearx-tauri-eframe"
# path = "src/bin/nearx-tauri.rs"
# required-features = ["egui-ui"]
